--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   margin: 0;
   height: auto;
   background: #eee;
@@ -29,8 +29,8 @@ img {
 main {
   max-width: 900px;
   margin: auto;
-  box-shadow: 30px 0px 40px rgba(0,0,0,0.1),
-  -30px 0px 40px rgba(0,0,0,0.1);
+  box-shadow: 30px 0px 40px rgba(0,0,0,0.2),
+  -30px 0px 40px rgba(0,0,0,0.2);
 }
 
 #landing {
@@ -76,3 +76,56 @@ main {
 .btn:hover {
   background: #f4f4f4;
 }
+
+#header {
+  padding: 1.5rem;
+  text-align: center;
+  background: #333;
+  color: #fff;
+}
+
+#header h2 {
+  border-left: 1px dotted #fff;
+  border-right: 1px dotted #fff;
+  display: inline-block;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.caption {
+  padding: 0.8rem;
+  text-align: center;
+}
+
+footer {
+  text-align: center;
+  padding: 2rem 1rem;
+  margin: auto;
+  color: #333;
+}
+
+footer h3 {
+  font-size: 2rem;
+  margin-bottom: 0;
+}
+
+@media(min-width: 500px) {
+  #landing {
+    display: flex;
+    height: 100%;
+  }
+
+  #landing-text {
+    height: 100vh;
+  }
+
+  #landing-image {
+    height: 100vh;
+  }
+}
+
+@media(min-width: 700px) {
+  .btn {
+    padding: 1rem 3rem;
+  }
+} 
